# account/api/account.go
@@ -3,7 +3,6 @@ package account
 
 import (
 	"context"
-	"fmt"
 	"math/big"
 	"time"
 
@@ -16,10 +15,7 @@ import (
 	"google.golang.org/grpc/status"
 
 	data_fin "yun.tea/block/bright/common/chains/eth/datafin"
-	"yun.tea/block/bright/common/cruder"
 	"yun.tea/block/bright/common/logger"
-	"yun.tea/block/bright/common/utils"
-	"yun.tea/block/bright/proto/bright"
 	proto "yun.tea/block/bright/proto/bright/account"
 
 	"github.com/Vigo-Tea/go-ethereum-ant/accounts/abi/bind"
@@ -156,44 +152,68 @@ func (s *Server) GetAccounts(ctx context.Context, in *proto.GetAccountsRequest) 
 	}, nil
 }
 
-// should be change root account
 func (s *Server) SetRootAccount(ctx context.Context, in *proto.SetRootAccountRequest) (*proto.SetRootAccountResponse, error) {
+	logger.Sugar().Infow("SetRootAccount", "start to set admin account", in.ID)
+	ctx, cancel := context.WithTimeout(ctx, LongRequestTimeout)
+	defer cancel()
+
 	var err error
-	conds := &proto.Conds{
-		IsRoot: &bright.BoolVal{
-			Op:    cruder.EQ,
-			Value: true,
-		},
-	}
-	_, total, err := crud.Rows(ctx, conds, 0, 0)
+	defer func() {
+		if err != nil {
+			logger.Sugar().Errorw("SetRootAccount", "Err", err)
+		}
+		logger.Sugar().Infow("SetRootAccount", "end to set root account", in.ID)
+	}()
+
+	id, err := uuid.Parse(in.GetID())
 	if err != nil {
-		logger.Sugar().Errorw("SetRootAccount", "error", err)
+		logger.Sugar().Errorw("SetRootAccount", "ID", in.GetID(), "error", err)
+		return &proto.SetRootAccountResponse{}, status.Error(codes.InvalidArgument, err.Error())
+	}
+
+	info, err := crud.Row(ctx, id)
+	if err != nil {
+		logger.Sugar().Errorw("SetRootAccount", "ID", in.GetID(), "error", err)
 		return &proto.SetRootAccountResponse{}, status.Error(codes.Internal, err.Error())
 	}
 
-	if total == 0 {
-		// 检查是否有合约且是否在合约内是root
-	} else {
-		// 请求交换root账户，并更新redis中和数据库中的数据
+	if info.IsRoot {
+		return &proto.SetRootAccountResponse{
+			Info: converter.Ent2Grpc(info),
+		}, nil
 	}
 
-	isRoot := true
-	info, err := crud.Update(ctx, &proto.AccountReq{
-		ID:     &in.ID,
-		IsRoot: &isRoot,
+	err = mgr.WithWriteContract(ctx, true, func(ctx context.Context, acc *mgr.AccountKey, contract *data_fin.DataFin) error {
+		priKey, err := crypto.HexToECDSA(acc.Pri)
+		if err != nil {
+			return err
+		}
+		opts, err := bind.NewKeyedTransactorWithChainID(priKey, ChainID)
+		if err != nil {
+			return err
+		}
+
+		_, err = contract.ChangeOwner(opts, common.HexToAddress(info.Address))
+		return err
 	})
 
 	if err != nil {
-		logger.Sugar().Errorw("SetRootAccount", "error", err)
 		return &proto.SetRootAccountResponse{}, status.Error(codes.Internal, err.Error())
 	}
+
+	if err = mgr.GetAccountMGR().SetRootAccount(&mgr.AccountKey{Pri: info.PriKey, Pub: info.Address}); err != nil {
+		return &proto.SetRootAccountResponse{}, status.Error(codes.Internal, err.Error())
+	}
+
+	go mgr.CheckAllAccountState(context.Background())
+	info.Enable = true
+	info.IsRoot = true
 
 	return &proto.SetRootAccountResponse{
 		Info: converter.Ent2Grpc(info),
 	}, nil
 }
 
-// SetAdminAccount
 func (s *Server) SetAdminAccount(ctx context.Context, in *proto.SetAdminAccountRequest) (*proto.SetAdminAccountResponse, error) {
 	logger.Sugar().Infow("SetAdminAccount", "start to set admin account", in.ID)
 	ctx, cancel := context.WithTimeout(ctx, LongRequestTimeout)
@@ -230,16 +250,12 @@ func (s *Server) SetAdminAccount(ctx context.Context, in *proto.SetAdminAccountR
 		if err != nil {
 			return err
 		}
-		fmt.Println(acc.Pri)
-		fmt.Println(acc.Pub)
-		fmt.Println(info.Address)
 		opts, err := bind.NewKeyedTransactorWithChainID(priKey, ChainID)
 		if err != nil {
 			return err
 		}
 
-		tx, err := contract.AddAdmin(opts, common.HexToAddress(info.Address), info.Remark)
-		fmt.Println(utils.PrettyStruct(tx))
+		_, err = contract.AddAdmin(opts, common.HexToAddress(info.Address), info.Remark)
 		return err
 	})
 
@@ -247,19 +263,8 @@ func (s *Server) SetAdminAccount(ctx context.Context, in *proto.SetAdminAccountR
 		return &proto.SetAdminAccountResponse{}, status.Error(codes.Internal, err.Error())
 	}
 
-	if err = mgr.GetAccountMGR().SetRootAccount(&mgr.AccountKey{Pri: info.PriKey, Pub: info.Address}); err != nil {
-		return &proto.SetAdminAccountResponse{}, status.Error(codes.Internal, err.Error())
-	}
-
-	enable := true
-	info, err = crud.Update(ctx, &proto.AccountReq{
-		ID:     &in.ID,
-		Enable: &enable,
-	})
-	if err != nil {
-		return &proto.SetAdminAccountResponse{}, status.Error(codes.Internal, err.Error())
-	}
-
+	go mgr.CheckAllAccountState(context.Background())
+	info.Enable = true
 	return &proto.SetAdminAccountResponse{
 		Info: converter.Ent2Grpc(info),
 	}, nil
